--- a/src/Chess.Engine/Chess.Engine.csproj
+++ b/src/Chess.Engine/Chess.Engine.csproj
@@ -5,4 +5,8 @@
         <RootNamespace>Engine</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="PlayerRepresentation" />
+    </ItemGroup>
+
 </Project>
