--- a/src/Chess.Engine/Chess.Engine.csproj
+++ b/src/Chess.Engine/Chess.Engine.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>Engine</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="NAudio.Core" Version="2.0.0" />
+    </ItemGroup>
 </Project>
