--- a/src/Chess.GUI/Chess.GUI.csproj
+++ b/src/Chess.GUI/Chess.GUI.csproj
@@ -9,11 +9,16 @@
         <AvaloniaResource Include="Assets\**" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.7" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.7" />
-        <PackageReference Include="Avalonia.Diagnostics" Version="0.10.7" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.7" />
+        <PackageReference Include="Avalonia" Version="0.10.8" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.10.8" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="0.10.8" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.8" />
+        <PackageReference Include="LibVLCSharp" Version="3.6.1" />
+        <PackageReference Include="LibVLCSharp.Avalonia" Version="3.6.1" />
         <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+        <PackageReference Include="NAudio" Version="1.10.0" />
+        <PackageReference Include="NAudio.Core" Version="2.0.0" />
+        <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Chess.Engine\Chess.Engine.csproj" />
