Fixed PGN parser bugs.

--- a/src/Chess.GUI/Chess.GUI.csproj
+++ b/src/Chess.GUI/Chess.GUI.csproj
@@ -49,4 +49,7 @@
         <SubType>Code</SubType>
       </Compile>
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="Assets\Games.txt" />
+    </ItemGroup>
 </Project>
