--- a/src/Chess.Engine/Chess.Engine.csproj
+++ b/src/Chess.Engine/Chess.Engine.csproj
@@ -8,5 +8,6 @@
 
     <ItemGroup>
       <PackageReference Include="NAudio.Core" Version="2.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 </Project>
