--- a/src/Chess.GUI/Chess.GUI.csproj
+++ b/src/Chess.GUI/Chess.GUI.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
         <PackageReference Include="NAudio" Version="1.10.0" />
         <PackageReference Include="NAudio.Core" Version="2.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16" />
     </ItemGroup>
     <ItemGroup>
